--- a/index.html
+++ b/index.html
@@ -13,26 +13,24 @@
 			<img src="me.jpg" alt="NicoJelo">
 			
 			<div class = "text">
+			
+				<h3>Course: BS Computer Science </h3>
 
-				<h3>Course:</h3>
-				<p> BS Computer Science</p>
-
-				<h3>Student Number:</h3>
-				<p> 2015-04344 </p>
+				<h3>Student Number: 2015-04344 </h3>
 
 				<h3>About:</h3>
-				<p> From province of Tarlac, Very Short, 157cm, interested in Computer Science, outlets include Singing and Meditation </p>
-				<p> Email: mercadonicoa@gmail.com <br>
-						   nlmercado@up.edu.ph</p>
+				<h3> From province of Tarlac, Very Short, 157cm, <br> interested in Computer Science, outlets include Singing and Meditation </h3>
+				<h3> Email: mercadonicoa@gmail.com <br>
+						   nlmercado@up.edu.ph</h3>
 
 				<h3>Expectations for the subject/teacher:</h3>
-				<p> Reach course objectives, and thorough discussions.</p>
+				<h3> Reach course objectives, and thorough discussions.</h3>
 
 				<h3>Number of times I have taken CMSC 100:</h3>
-				<p> 1st </p>
+				<h3> 1st </h3>
 
 				<h3>Contact Number:</h3>
-				<p> Mobile: 09152964334 </p>
+				<h3> Mobile: 09152964334 </h3>
 			</div>
 		</div>
 	</body>
